add duplicity validation :bat:

--- a/encyclopedia/templates/encyclopedia/new_page.html
+++ b/encyclopedia/templates/encyclopedia/new_page.html
@@ -8,6 +8,12 @@
 
 <div class="container">
     
+    {% if error %}
+    <div class="alert alert-danger alert-dismissible fade show mt-3" role="alert">
+        {{ error }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endif %}
     <form method="post" class="d-flex flex-column gap-3 justify-content-center">
         {% csrf_token %}
         <label for="{{ form.title.id_for_label }}">Title:</label>
@@ -32,7 +38,6 @@
 
         <button type="submit" class="btn btn-primary align-self-end">Create entry</button>
     </form>
-
 
 </div>
 
